force-app/main/default/objects/MeetingMinutes__c/MeetingMinutes__c.object-meta.xml
<CustomObject>
    <label>Meeting Minutes</label>
    <nameField>
        <label>Título da Reunião</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meeting Minutes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>