force-app/main/default/objects/MeetingMinutes__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meeting Minutes</relationshipLabel>
    <relationshipName>Meeting_Minutes</relationshipName>
    <type>Lookup</type>
</CustomField>