force-app/main/default/objects/MeetingMinutes__c/fields/Conteudo_Ata__c.field-meta.xml
<CustomField>
    <fullName>Conteudo_Ata__c</fullName>
    <label>Conteúdo da Ata</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>