force-app/main/default/objects/MeetingMinutes__c/fields/Data_Reuniao__c.field-meta.xml
<CustomField>
    <fullName>Data_Reuniao__c</fullName>
    <label>Data da Reunião</label>
    <type>Date</type>
</CustomField>