force-app/main/default/objects/MeetingMinutes__c/fields/Transcricao__c.field-meta.xml
<CustomField>
    <fullName>Transcricao__c</fullName>
    <label>Transcrição</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>